--- a/portafolio/index.css
+++ b/portafolio/index.css
@@ -5,7 +5,9 @@
 }
 body{
     font-family: 'Arial',sans-serif;
-    background: radial-gradient(circle,#2c3e50,#34495e);
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    background-color: #0F103F;
     color: white;
     line-height: 1.6;
 }
